Update DiscussionCache behavior, and fix scrolling and app size on mobile

--- a/public/login.css
+++ b/public/login.css
@@ -7,6 +7,12 @@ body {
 	justify-content: center;
 	align-items: center;
 	height: 100vh;
+
+	padding-top: env(safe-area-inset-top);
+	padding-right: env(safe-area-inset-right);
+	padding-bottom: env(safe-area-inset-bottom);
+	padding-left: env(safe-area-inset-left);
+
 }
 
 form {
